test/fail/invaliddim3.min
program
    array x[1+1] := 30, 17
start
end
